examples/test/testpolicy3668.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3668
  namespace: namespace408
spec:
  podSelector:
    matchLabels:
      key7: value10
      key1: value17
      key5: value30
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key14: value25
          key31: value9
      podSelector:
        matchLabels:
          key4: value6
          key24: value4
          key47: value35
